<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/grayBackground"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.6"
        android:background="@drawable/block"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailySteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_goal"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDailySteps"
        app:layout_constraintEnd_toStartOf="@+id/editDailySteps"
        app:layout_constraintStart_toStartOf="@id/grayBackground"
        app:layout_constraintTop_toTopOf="@+id/editDailySteps"/>

    <EditText
        android:id="@+id/editDailySteps"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/enter"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/grayBackground"
        app:layout_constraintEnd_toEndOf="@id/grayBackground"
        app:layout_constraintStart_toEndOf="@id/dailySteps"
        app:layout_constraintTop_toTopOf="@id/grayBackground"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ok"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="saveGoal"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/grayBackground"
        app:layout_constraintEnd_toEndOf="@id/grayBackground"
        app:layout_constraintStart_toStartOf="@id/grayBackground"
        app:layout_constraintTop_toBottomOf="@id/editDailySteps"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>